# iscn-authenticator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  deno.json  iscn_2024.txt  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  publish-web.yml
api/: Dockerfile  pyproject.toml  server.py
deno/: .gitignore  admin.ts  cli.ts  deno.json  main.ts  server.ts
deno/lib/: auth.ts  axiom.ts  config.ts  customers.ts  dashboard.ts  engine.ts  errors.ts  keys.ts  logging.ts  middleware.ts  openapi.ts  pages.ts  parser.ts  quota.ts  ratelimit.ts  security_headers.ts  sessions.ts  signup.ts  stripe.ts  token_bucket.ts  types.ts  validate.ts  validator.ts  webhooks.ts
deno/lib/rules/: chromosome.ts
deno/scripts/: embed-openapi.ts
deno/static/: index.html  iscn-core.js  iscn-core.js.map  style.css
deno/tests/: auth_test.ts  axiom_test.ts  config_test.ts  customers_test.ts  dashboard_test.ts  docs_test.ts  errors_test.ts  integration_test.ts  keys_test.ts  logging_test.ts  openapi_test.ts  quota_test.ts  ratelimit_test.ts  rotate_test.ts  sessions_test.ts  signup_test.ts  stripe_test.ts  token_bucket_test.ts  usage_test.ts  webhooks_test.ts
docs/: admin.md  api.md  billing.md  openapi.yaml  quickstart.md  release.md
docs/archive/: README.md
docs/archive/plans/: 2025-12-16-validation-engine-design.md  2025-12-16-validation-engine-implementation.md  2026-04-16-milestone-0-library-consolidation-plan.md  m2-9-stripe.md
docs/compliance/: README.md  baa_template.md  iq_template.md  oq_template.md  pq_template.md  privacy_policy_template.md  soc2_evidence_outline.md  terms_template.md
docs/plans/: 2026-04-16-milestone-0-library-consolidation-plan.md  2026-04-16-monetization-v1-design.md
fixtures/: README.md  validity.json
iscn_authenticator/: engine.py  explain.py  main.py  models.py  parser.py
iscn_authenticator/rules/: __init__.py  abnormality.py  base.py  chromosome.py
scripts/: debug_ast.ts  fetch_cytobands.ts  stress_test.ts  validate_json.py  verify-pypi-tag.py  verify_logic.ts
tests/: test_engine.py  test_explain.py  test_fixtures.py  test_main.py  test_models.py  test_parser.py  test_rules_abnormality.py  test_rules_base.py  test_rules_chromosome.py
