[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iscn-authenticator"
version = "0.2.0"
description = "ISCN 2024 karyotype validation — parser, rule engine, and types."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paulo Nuin" }]
keywords = ["iscn", "karyotype", "cytogenetics", "bioinformatics", "validation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.urls]
Homepage = "https://iscn.bioinformat.com"
Repository = "https://github.com/nuin/iscn-authenticator"

[tool.hatch.build.targets.wheel]
packages = ["iscn_authenticator"]

[tool.hatch.build.targets.sdist]
include = [
  "iscn_authenticator/",
  "fixtures/",
  "tests/",
  "README.md",
  "pyproject.toml",
]
